--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "opentok-web-chat",
+  "name": "web-chat",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "heroku-postbuild": "ng build --prod",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
@@ -19,9 +22,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@pusher/chatkit-client": "^1.13.2",
+    "axios": "^0.19.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
+    "typescript": "2.9.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -44,5 +52,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
+  },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.12.0"
   }
 }
