--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "tslib": "^1.9.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
-    "typescript": "2.9.2",
+    "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
